# postman-mcp

./: README.md  mcp.example.json  postman_server.py  pyproject.toml
tools/: __init__.py  postman_tools.py  toolhandler.py
